# OptiRCA-multiAgent-langgraph

./: .env.example  .gitignore  Dockerfile  Makefile  PRD.md  README.md  demo.py  docker-compose.yml  pyproject.toml
frontend/: Dockerfile  next.config.js  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/components/: ChatPanel.tsx  GraphEdge.tsx  GraphNode.tsx  GraphPanel.tsx  HitlPanel.tsx  LogStream.tsx  MessageBubble.tsx  NodeDetailDrawer.tsx  StatusBadge.tsx  SubgraphViewer.tsx
frontend/app/store/: session.ts
nginx/: default.conf
src/optirc/api/: main.py
src/optirc/core/: __init__.py  config.py  encoding.py  llm_client.py  state.py  topology_manager.py  tracing.py
src/optirc/graphs/: __init__.py  parent.py
src/optirc/graphs/subgraphs/: __init__.py  closure.py  diagnosis.py  diagnosis_validation.py  human_review.py  perception.py  planning.py  solution_validation.py
src/optirc/ingestion/: __init__.py  csv_parser.py
src/optirc/knowledge/: __init__.py  kg_query.py  neo4j_client.py
src/optirc/memory/: __init__.py  db_store.py  redis_store.py
src/optirc/models/: __init__.py  session.py
src/optirc/rag/: __init__.py  vector_store.py
src/optirc/tools/: __init__.py  registry.py
tests/: conftest.py
tests/integration/: test_api.py
tests/unit/: test_diagnosis.py  test_diagnosis_validation.py  test_llm_client.py  test_parent_graph.py  test_perception.py  test_solution_validation.py
