[project]
name = "optirc"
version = "0.1.0"
description = "OptiRCA — LangGraph multi-agent optical network operations assistant"
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.1.0",
    "pydantic-settings>=2.1.0",
    "langgraph>=0.2.50",
    "langchain-core>=0.2.0",
    "langsmith>=0.1.0",
    "openai>=1.30.0",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.9",
    "redis>=5.0.0",
    "neo4j>=5.18.0",
    "chromadb>=0.4.24",
    "python-multipart>=0.0.9",
    "python-dotenv>=1.0.0",
    "chardet>=5.2.0",
    "Pillow>=10.0.0",
    "websockets>=12.0",
    "httpx>=0.27.0",
    "typing_extensions>=4.12.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.14.0",
]

[project.optional-dependencies]
dev = [
    "black>=24.0.0",
    "isort>=5.13.0",
    "mypy>=1.9.0",
    "ruff>=0.3.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.black]
line-length = 100
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true